<resources>
    <string name="app_name">JobFinder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Авторизация</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="db_ip">triniti.ru-hoster.com/iborlZer?characterEncoding=utf8</string>
    <string name="db_login">iborlZer</string>
    <string name="db_password">22599226a</string>
    <string-array name="citys">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Новосибирск</item>
        <item>Екатеринбург</item>
        <item>Нижний Новгород</item>
        <item>Казань</item>
        <item>Челябинск</item>
        <item>Омск</item>
        <item>Самара</item>
        <item>Ростов-на-Дону</item>
        <item>Уфа</item>
        <item>Красноярск</item>
        <item>Пермь</item>
        <item>Воронеж</item>
        <item>Волгоград</item>
        <item>Краснодар</item>
        <item>Саратов</item>
        <item>Тюмень</item>
        <item>Тольятти</item>
        <item>Ижевск</item>
        <item>Другой город</item>
    </string-array>
    <string-array name="categories">
        <item>Бытовые услуги</item>
        <item>Курьерские услуги</item>
        <item>IT Услуги</item>
        <item>Охранные услуги</item>
        <item>Ремонтные услуги</item>
        <item>Другое</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="add_Name">Название вашего объявления:</string>
    <string name="add_Text">Текст вашего объявления:</string>
    <string name="add_Cost">Оплата:</string>
    <string name="add_Adress">Адреса:</string>
    <string name="close">Закрыть</string>
    <string name="phone_text">Для использования функций приложения в полном объеме укажите номер Вашего телефона</string>
    <string name="phone_accept">Подтверждая номер телефона Вы соглашаетесь с условиями смс-рассылки</string>
    <string name="title_activity_asfgasg">Map</string>
    <string name="title_activity_ashg">Map</string>
    <string name="pName">Название объявления</string>
    <string name="pText">Текст объявления</string>
    <string name="pCost">Оплата за выполнение</string>
    <string name="select_category">Выберете категорию:</string>
    <string name="pCategory">Нажмите чтобы выбрать категорию</string>
    <string name="select_sity">Населённый пункт:</string>
    <string name="pCity">Населённый пункт</string>
    <string name="next">Далее</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="authorization">Авторизация</string>
    <string name="enter">Войти</string>
    <string name="registation">Регистрация</string>
    <string name="accept_phone">Подтверждение телефона</string>
    <string name="_7951_111_11_11">Номер телефона</string>
    <string name="nexty">Nexty</string>
    <string name="name">Name</string>
    <string name="unusedname">Name</string>
    <string name="adresses">Адреса:</string>
    <string name="yourName">Ваше имя:</string>
    <string name="yourNamess">Ваше имя</string>
    <string name="yourSurname">Ваша фамилия:</string>
    <string name="yourSurname_hint">Ваша фамилия</string>
    <string name="yourLogin">Ваш логин:</string>
    <string name="yourLogin_hint">Ваш логин</string>
    <string name="yourPassword">Ваш пароль:</string>
    <string name="yourPassword_hint">Ваш пароль</string>
    <string name="yourAge">Ваш возраст:</string>
    <string name="info_age">Возраст: </string>
    <string name="yourAge_hint">Ваш возраст</string>
    <string name="yourCity">Ваш город:</string>
    <string name="select_city">Нажмите для выбора города</string>
    <string name="default_text">Text</string>
    <string name="icon">icon</string>
    <string name="try_again">Попробуйте через несколько секунд</string>
    <string name="succesfull_created">Ваше объявление отправлено на модерацию</string>
    <string name="error_created">Ошибка. Ваше объявление не было создано</string>
    <string name="error">Ошибка</string>
    <string name="error_loaded">Ошибка загрузки. Попробуйте позже</string>
    <string name="not_found_internet">Ошибка. У вас отсутствует подключение к сети Интернет. Проверьте ваше соединение
     и повторите попытку позже.</string>
    <string name="exit">Выйти</string>
    <string name="posts_not_found">В данной категории нет объявлений :(</string>
    <string name="small_login">Слишком короткий логин</string>
    <string name="small_password">Слишком короткий пароль</string>
    <string name="long_password">Слишком длинный пароль</string>
    <string name="small_namePost">Слишком короткое название объявления</string>
    <string name="small_textPost">Текст объявления должен содержать минимум 32 символа</string>
    <string name="small_costPost">Слишком короткое описание оплаты</string>
    <string name="category_no_selected">Вы не выбрали категорию</string>
    <string name="add_adress">+ Добавить адрес</string>
    <string name="accept_exit_post">Вы действительно хотите завершить создание объявления?\n\nВнимение: Если вы покините создание нового объявления, все введённые вами данные будут потеряны.</string>
    <string name="login_used">Данный логин уже занят</string>
    <string name="email_used">Данный адрес электронной почты уже занят</string>
    <string name="succesfull_register">Аккаунт успешно зарегистрирован</string>
    <string name="long_login">Слишком длинный логин</string>
    <string name="error_internet">Ошибка подключения к интернету</string>
    <string name="loaded">Загрузка данных\nОдну минуточку...</string>
    <string name="error_auth">Аккаунт с таким логином и паролем не найден</string>
    <string name="select_adress">Выбранный адрес:</string>
    <string name="adres">Адрес:</string>
    <string name="loaded_info">Загрузка данных:</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="number_phone">Введите номер вашего телефона</string>
    <string name="message_sending">Сообщение уже отправляется</string>
    <string name="code_checking">Код уже проверяется</string>
    <string name="false_code">Неверное введён код</string>
    <string name="phone_used">Данный номер телефона уже используется другим пользователем</string>
    <string name="sending_sms">Отправка смс...</string>
    <string name="code_in_sms">Код СМС</string>
    <string name="number_is_saved">Номер привязан</string>
    <string name="checked">Проверка...</string>
    <string name="selected_city">Выберите ваш город:</string>
    <string name="enter_city">Введите название вашего города</string>
    <string name="messages_not_found">Для Вас нет сообщений</string>
    <string name="error_connection">Ошибка соединения с сервером. Попробуйте немного позже</string>
    <string name="your_text">Ваш текст</string>
    <string name="nextt">next</string>
    <string name="send">Send</string>
    <string name="sending">Отправляем Ваше сообщение...</string>
    <string name="update">Обновление...</string>
    <string name="messages">Сообщения</string>
    <string name="new_ticker">У вас новое сообщение на JobFinder</string>
    <string name="new_message">Новое сообщение:</string>
    <string name="message_text">Сообщение от </string>
    <string name="actions">Действия:</string>
    <string name="action_sending">Связаться с автором</string>
    <string name="action_accept">Принять работу</string>
    <string name="developed">В разработке</string>
    <string name="post_amount_executed">Проверяем сколько заданий вы выполняете...</string>
    <string name="post_check_executing">Проверяем, не выполняет-ли это задание другой человек</string>
    <string name="post_making">Назначаем вам задание</string>
    <string name="success">Успешно</string>
    <string name="unsuccess">Неуспешно</string>
    <string name="post_executed">Вы успешно приняли это задание.\nПодробности выполнения вы можете найти в меню "Мои задания"</string>
    <string name="post_error_too_mach_executing">Вы уже выполняете задание</string>
    <string name="post_occupied">Задание уже выполняет кто-то другой</string>
    <string name="t_Service">Бытовые услуги</string>
    <string name="t_Postal">Услуги курьера</string>
    <string name="t_IT">IT Услуги</string>
    <string name="t_Securyty">Охранные услуги</string>
    <string name="t_Repair">Ремонтные услуги</string>
    <string name="t_Other">Другое</string>
    <string name="create_post">Создать своё объявление</string>
    <string name="logo">logo</string>
    <string name="vote_information">Информация</string>
    <string name="vote_info">Вы находитесь в режиме модерации новых объявлений.\nПеред вами список самых новых объявлений,который Вы должны промодерировать.\n\n
    Пожалуйста, отклоняйте объявления не соответствующие правилам проекта\n\n
    За одно модерированое объявление с вашего счёта снимается 20 очков.\nОчки можно заработать выполняя или создавая объявления.\n\n
    Для вынесения решения по модерации объявления - передвиньте текст влево и нажмите + Если объявление
    удовлетворяет критериям и -, если не удовлетворяет</string>
    <string name="votess_not_found">В данный момент нет постов нуждающихся в модерации</string>
    <string name="not_money">На вашем счету недостаточно баллов.\n\nСтоимость одной модерации - 20 баллов.\n\nБаллы можно заработать создавая объявления или выполняя задания</string>
    <string name="mail_header">Привязка Email</string>
    <string name="mail_enter">Введите в поле Ваш настоящий адрес электронной почты</string>
    <string name="mail_ented_code">Введите в поле код, отправленный на Ваш адрес электронной почты</string>
    <string name="mail_hint">Ваш адрес электронной почты</string>
    <string name="mail_hint_code">Код из письма</string>
    <string name="mail_text">Адрес электронной почты необходим для того, чтобы Вы всегда были в курсе новостей и
    вовремя получали полезную информацию</string>
    <string name="mail_not_found">Адрес Вашей электронной почты не указанс</string>
    <string name="mail_created">Привязать почту</string>
    <string name="gcm_project_id">credible-tesla-125915</string>
    <string name="load_more">Загрузить больше</string>
    <string name="delete">Удалить</string>
    <string name="not_yourself">Извините, но Вы не можете писать самому себе :(</string>
    <string name="deleted">Удаление</string>
    <string name="open_message">Сообщение</string>
    <string name="info_score">ОЧКИ:</string>
    <string name="score">score</string>
    <string name="city">city</string>
    <string name="info_city">Город: </string>
    <string name="age">age</string>
    <string name="posts_add">posts_add</string>
    <string name="info_posts_add">Создано объявлений: </string>
    <string name="info_posts_execute">Выполнено объявлений: </string>
    <string name="posts_execute">posts_execute</string>
    <string name="contact_mail">contact_mail</string>
    <string name="iinfo_contact_mail">Почта: </string>
    <string name="iinfo_contact_phone">Телефон: </string>
    <string name="contact_phone">contact_phone</string>
    <string name="img_status">img_status</string>
    <string name="online">Онлайн</string>
</resources>