<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/Rel"
    android:background="@drawable/patter">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView2"
        android:src="@drawable/logo_app"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/rowLogin"
        android:singleLine="true"
        android:textAlignment="center"
        android:maxLines="1"
        android:hint="@string/login"
        android:layout_centerHorizontal="true"
        android:maxLength="24"
        android:lines="1"
        android:textColor="@color/auth_color"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/rowPassword"
        android:layout_marginTop="15dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:maxLines="1"
        android:hint="@string/password"
        android:layout_below="@+id/rowLogin"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="32"
        android:textColor="@color/auth_color" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:id="@+id/button_Enter"
        android:layout_below="@+id/rowPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/buttonbackground"
        android:textColor="@color/auth_color" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/registation"
        android:id="@+id/button_Reg"
        android:layout_marginTop="10dp"
        android:background="@color/buttonbackground"
        android:layout_below="@+id/button_Enter"
        android:layout_centerHorizontal="true"
        android:textColor="@color/auth_color" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>