<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/nextButton">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/LinearInScroll">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/add_Name"
                android:id="@+id/textView2"
                android:textSize="20sp"
                android:textIsSelectable="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pName"
                android:hint="Название объявления"
                android:maxLines="1"
                android:maxLength="32"
                android:lines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/add_Text"
                android:id="@+id/textView3"
                android:textSize="20sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pText"
                android:hint="Текст объявления"
                android:maxLength="2048" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/add_Cost"
                android:id="@+id/textView4"
                android:textSize="20sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pCost"
                android:hint="Оплата за выполнение"
                android:maxLength="256"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Выберите категорию:"
                android:id="@+id/textView6"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Нажмите чтобы выбрать категорию"
                android:id="@+id/pCategory"
                android:textSize="18dp"
                android:padding="6dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/add_Adress"
                android:id="@+id/textView5"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Далее"
        android:id="@+id/nextButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/buttonbackground" />
</RelativeLayout>